--- a/src/components/informe.component.css
+++ b/src/components/informe.component.css
@@ -7,6 +7,18 @@
     padding: 20px 0;
 }
 
+/* ANULA CUALQUIER FORM GLOBAL QUE LO AFECTE */
+.a4-form {
+    all: unset; /* BORRA TODOS LOS ESTILOS INDESEADOS */
+    display: block;
+}
+
+/* Y REACTIVAMOS SOLO LO QUE QUEREMOS */
+.a4-form {
+    width: 100%;
+}
+
+
 /* HOJA A4 SIMPLIFICADA */
 .informe-root .container {
     width: 800px !important;           /* similar a hoja A4 */
